# Kin

16_to_32/: .mxproject  16_to_32.ioc
16_to_32/EWARM/: 16_to_32.dep  16_to_32.ewd  16_to_32.ewp  Project.eww
CAN_Test/: .mxproject  CAN_Test.ioc
CAN_Test/EWARM/: CAN_Test.dep  CAN_Test.ewd  CAN_Test.ewp  Project.eww
CMSIS_Test/: CMSIS_Test.dep  CMSIS_Test.ewd  CMSIS_Test.ewp  CMSIS_Test.ewt
CMSIS_Test/Debug/: .ninja_deps  .ninja_log
CMSIS_Test/settings/: CMSIS_Test.Debug.cspy.bat  CMSIS_Test.Debug.cspy.ps1  CMSIS_Test.Debug.general.xcl  CMSIS_Test.dnx
CMSIS_Test/src/: main.c
Enc_F103/: .mxproject  Enc_F103.ioc
Enc_F103/EWARM/: Enc_F103.dep  Enc_F103.ewd  Enc_F103.ewp  Project.eww
Enc_F411/: .mxproject  Enc_F411.ioc
Enc_F411/EWARM/: Enc_F411.dep  Enc_F411.ewd  Enc_F411.ewp  Project.eww
F411_ILI9486/: .mxproject  F411_ILI9486.ioc
F411_ILI9486/EWARM/: F411_ILI9486.dep  F411_ILI9486.ewd  F411_ILI9486.ewp  F411_ILI9486.ewt  Project.eww
F411_Taho/: .mxproject  F411_Taho.ioc
F411_Taho/EWARM/: F411_Taho.dep  F411_Taho.ewd  F411_Taho.ewp  F411_Taho.ewt  Project.eww
F411_Taho_without_ISR/: .mxproject  F411_Taho_without_ISR.ioc
F411_Taho_without_ISR/EWARM/: Project.eww  (+4 more)
HIDKbd/: .mxproject  HIDKbd.ioc
HY32D/: HY32D.ioc
LINS-I500/: LINS-I500.ioc
PID_Training/: .mxproject  PID_Training.ioc
Test_Freqmeter/: .mxproject  Test_Freqmeter.ioc
Test_PS_2_OUTPUT/: .mxproject  Test_PS_2_OUTPUT.ioc
Time_var/: Time_var.ioc
UTFT_TEST_F411/: .mxproject  UTFT_TEST_F411.ioc
test/: CMakeLists.txt
test/main/: main.cpp
testusbhid/: testusbhid.ioc
(+1641 files in other folders)
